refactor: update configuration specification to separate notification and environment, disable verticles by default